<resources>
    <string name="app_name"> 4k Anime</string>
    <string name="info1">इस ऐप को बनाने में  बहुत ही परिश्रम और अमूल्य समय लगा है।</string>
    <string name="info2">अगर  यह ऐप आपको अच्छा लगा हो तोह निचे दिए गए बटन पर क्लिक कर के 5 स्टार रेटिंग दे।</string>
    <string name="info4">रेट  करने के लिए यहाँ क्लिक करे।</string>
    <string name="info5">शेयर  करने के लिए यहाँ क्लिक करे </string>
    <string name="about">सपना चौधरी एक भारतीय गायिका, नृतकी और अभिनेत्री है  जिनका जन्म 25 सितम्बर 1990 (आयु 29)
रोहतक में हुआ है । सपना टीवी रियलिटी शो बिग बॉस 11 की प्रतिभागी भी रह चुकी है। सपना ने बॉलीवुड फिल्मों में आइटम सॉंग भी किया है।</string>
    <string name="nav_header_title">Super Car</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="credit1">The content provided in this app is hosted by third party websites and is available in the public domain. We do not reserve any copyright of Images; all the rights are with respected  Photo owners. Kindly contact them for any question or any violation.</string>

    <string name="jsonfile">final_city.json</string>
    <string name="my_email">avi96.rc@gmail.com</string>
    <string name="tab_text_1">favourite</string>
    <string name="tab_text_2">home</string>
    <string name="tab_text_3">category</string>
    <string name="favourite_file_name">favourite.json</string>
    <string name="version_name">V 1.0.0</string>

<!--    json files -->







    <string name="audi">audi.json</string>
    <string name="bentley">bentley.json</string>
    <string name="bmw">bmw.json</string>
    <string name="bugatti">bugatti.json</string>
    <string name="corvette">corvette.json</string>
    <string name="ferrari">ferrari.json</string>
    <string name="ford">ford.json</string>
    <string name="jaguar">jaguar.json</string>
    <string name="lamborghini">lamborghini.json</string>
    <string name="maserati">maserati.json</string>
    <string name="mazda">mazda.json</string>
    <string name="mclaren">mclaren.json</string>
    <string name="mercedes">mercedes.json</string>
    <string name="nissan">nissan.json</string>
    <string name="other">other.json</string>
    <string name="porsche">porsche.json</string>
    <string name="rolls_royce">rolls_royce.json</string>
    <string name="toyota">toyota.json</string>



    <string name="sports_car">sports_car.json</string>
    <string name="abstractt">final_abstract.json</string>
    <string name="aircraft">final_aircraft.json</string>
    <string name="architecture">final_architecture.json</string>
    <string name="art">final_art.json</string>
    <string name="baby">final_baby.json</string>
    <string name="beach">final_beach.json</string>
    <string name="black">final_black.json</string>
    <string name="christmas">final_christmas.json</string>
    <string name="city">final_city.json</string>
    <string name="drink">final_drink.json</string>
    <string name="fire">final_fire.json</string>
    <string name="fireworks">final_fireworks.json</string>
    <string name="food">final_food.json</string>
    <string name="hindu">final_hindu.json</string>
    <string name="jesus">final_jesus.json</string>
    <string name="love">final_love.json</string>
    <string name="neon">final_neon.json</string>
    <string name="quotes">final_quotes.json</string>
    <string name="rain">final_rain.json</string>
    <string name="ship">final_ship.json</string>
    <string name="smoke">final_smoke.json</string>
    <string name="space">final_space.json</string>
    <string name="sunset">final_sunset.json</string>
    <string name="texture">final_texture.json</string>
    <string name="underwater">final_underwater.json</string>
    <string name="waterfall">final_waterfall.json</string>
    <string name="winter">final_winter.json</string>
    <string name="women">final_women.json</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="nav_open">hello</string>
    <string name="nav_close">hello</string>



    <!--sample ads -->

<!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->

<!--    <string name="admob_home_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

<!--    <string name="admob_home_adapter_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

<!--    <string name="admob_viewpager_adapter_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->



    <!--end of sample ads -->



    <!--    laxmibhr -->


<!--    <string name="app_id">ca-app-pub-6398456303321389~7304212436</string>-->
<!--    <string name="admob_home_interstitial">ca-app-pub-6398456303321389/1021477018</string>-->
<!--    <string name="admob_home_adapter_interstitial">ca-app-pub-6398456303321389/7182688547</string>-->
<!--    <string name="admob_viewpager_adapter_interstitial">ca-app-pub-6398456303321389/4369695088</string>-->


    <!--    avi007 -->

        <string name="app_id">ca-app-pub-4389384805063190~7426821428</string>
        <string name="admob_home_interstitial">ca-app-pub-4389384805063190/4800658082</string>
        <string name="admob_home_adapter_interstitial">ca-app-pub-4389384805063190/7277226733</string>
        <string name="admob_viewpager_adapter_interstitial">ca-app-pub-4389384805063190/4651063394</string>


    <!--   -->


<!---->

<!--facebook ads -->
    <string name="banner_home">597337964586862_724114528575871</string>
    <string name="show_banner">597337964586862_724114858575838</string>
    <string name="banner_category">597337964586862_724115571909100</string>
    <string name="home_native_facebook">597337964586862_597339264586732</string>
    <string name="pager_native_facebook">597337964586862_691644898489501</string>

<!--    end of facebook ads -->

    <string name="sponsored">sponsored</string>



</resources>